Modified for WooCommerce

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,6 +61,11 @@ Text Domain: netting
 @import "site/site";
 
 /*--------------------------------------------------------------
+# WooCommerce
+--------------------------------------------------------------*/
+@import "woocommerce/woocommerce";
+
+/*--------------------------------------------------------------
 # Infinite scroll
 --------------------------------------------------------------*/
 @import "modules/infinite-scroll";
